[gd_scene load_steps=3 format=3 uid="uid://b3jdkp4vsbhya"]

[ext_resource type="Script" uid="uid://douxs6wqmoxm0" path="res://scripts/ui/BuildUI.gd" id="1_njhfg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_njhfg"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.08235294, 0.08235294, 0.08235294, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="UI" type="CanvasLayer"]

[node name="BuildUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_njhfg")

[node name="PanelContainer" type="PanelContainer" parent="BuildUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_njhfg")

[node name="HBoxContainer" type="HBoxContainer" parent="BuildUI/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BtnBuild" type="Button" parent="BuildUI/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
toggle_mode = true
text = "Foundation
"

[node name="BtnRooms" type="Button" parent="BuildUI/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Placeholder"

[node name="BtnUtilities" type="Button" parent="BuildUI/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Placeholder"

[node name="BtnDemolish" type="Button" parent="BuildUI/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Placeholder"
